--- a/firebase.json
+++ b/firebase.json
@@ -13,7 +13,7 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "/index.html"
+        "destination": "movies/index.html"
       }
     ]
   }
