--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angular-font-awesome": "^3.1.2",
     "angular2-flash-messages": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "firebase": "^7.2.2",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
